--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <!-- LEGGENDA ALTITUDINE -->
       <aside id="altitude-legend" aria-hidden="true">
-        <h4>Elevator</h4> <!-- titolo della barra -->
+        <h4>Elevation</h4> <!-- titolo della barra -->
         <div class="top">+7000 m</div> <!-- valore massimo -->
         <div class="bar"></div> <!-- barra colorata gradiente -->
         <div class="labels">
